Adding history of previously-entered messages!

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Première application</string>
     <string name="edit_message">Entrez un message.</string>
     <string name="button_send">Envoyer</string>
+    <string name="hello_world">Bonjour le monde</string>
 </resources>
