--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">primera Aplicación</string>
     <string name="edit_message">Introducir un mensaje.</string>
     <string name="button_send">Enviar</string>
+    <string name="hello_world">Hola Mundo</string>
 </resources>
