--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">First Application</string>
     <string name="edit_message">Enter a message.</string>
-    <string name="button_send">Send</string>
+    <string name="button_add">Add</string>
+    <string name="button_remove">Remove</string>
     <string name="hello_world">Hello World</string>
 </resources>
